lucy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucy-webhook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lucy-webhook
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: lucy-webhook
    spec:
      containers:
      - name: lucy-webhook
        image: gcr.io/api-for-warp-drive/lucy-webhook
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 8080
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfied: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: lucy-webhook
