lucy/k8s/port-monitor.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: port-monitor
spec:
  selector:
    matchLabels:
      app: port-monitor
  template:
    metadata:
      labels:
        app: port-monitor
    spec:
      containers:
      - name: monitor
        image: gcr.io/stackdriver-agents/stackdriver-agent:latest
        securityContext:
          privileged: true
