lucy/k8s/port-validator.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: port-validator
spec:
  selector:
    matchLabels:
      app: port-validator
  template:
    metadata:
      labels:
        app: port-validator
    spec:
      containers:
      - name: validator
        image: gcr.io/stackdriver-agents/validator:latest
        volumeMounts:
        - name: socket-data
          mountPath: /var/run/docker.sock
      volumes:
      - name: socket-data
        hostPath:
          path: /var/run/docker.sock
