lucy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lucy-webhook
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: lucy-webhook
