lucy/k8s/port-mapping.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: port-control
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 443
      protocol: TCP
